package com.tlotrintf.app.game.creatures;

public interface CreatureHates {
    
    public boolean hates();

}
