package com.tlotrintf.app.game.creatures;

public interface Dices {

    public int throwDices();
    
}
