package com.tlotrintf.app.game.creatures;

public interface creatureFears {
    
    public boolean fears();

}
