package com.tlotrintf.app.game.creatures;

public interface isHeroe {
    
    boolean isHeroe();
}
