package com.tlotrintf.app.game.utils;

public class Creatures {
    public static enum Types{
        HUMAN,
        ELF,
        HOBBIT,
        ORC,
        GOBLIN
    };
}